# aegis-verify

./: LICENSE  README.md  pyproject.toml
aegis/: __init__.py  backends.py  judge.py  loop.py
runners/: eval_cases.json  mock_keywords.py  mock_prompt.txt  rag_qa.py  rag_qa_prompt.txt  rag_qa_real.py  rag_qa_real_prompt.txt
tests/: test_demo.py
